<resources>
    <string name="app_name">Ludus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sign_in_error_email_passwrod">There seems to be an error in your password or email</string>
    <string name="profile">Profile</string>
    <string name="skills">Skills</string>
    <string name="feedback">Feedback</string>
    <string name="important_date">Important Dates</string>
    <string name="workouts">Workouts</string>
    <string name="goals">Goals</string>
    <string name="both_cant_be">You can only mark as a coach or a student</string>
    <string name="Ludus">Ludus</string>
    <string name="title_activity_student_profile">StudentProfile</string>
    <string name="title_activity_student_skills">StudentSkills</string>
    <string name="title_activity_student_feedback">StudentFeedback</string>
    <string name="title_activity_student_important_dates">StudentImportantDates</string>
    <string name="title_activity_student_workout">StudentWorkout</string>
    <string name="title_activity_student_goals">StudentGoals</string>
    <string name="name">Name</string>
    <string name="dash">-</string>
    <string name="sport">Sports</string>
    <string name="coaches">Coaches</string>
    <string name="city">City</string>
    <string name="john">John Dae</string>
    <string name="soccer">Soccer</string>
    <string name="coach_name">Mae Rabinson</string>
    <string name="santa_clara">Santa Clara</string>
    <string name="speed">Speed</string>
    <string name="stamina">Stamina</string>
    <string name="power">Power</string>
    <string name="paragraph">Even though your speed and power has vastly increased, you need to improve your stamina in order too be top competition league.</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_coach_profile">CoachProfile</string>
    <string name="student">Students</string>
    <string name="calender">Calender</string>
    <string name="connect">Connect</string>
    <string name="learn">Learn</string>
    <string name="title_activity_coaches__students">Coaches_Students</string>
    <string name="title_activity_student_view">StudentView</string>
    <string name="title_activity_student_edit">StudentEditActivity</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="Email_Input">Email</string>
    <string name="Password_Input">Password</string>
    <string name="Confirm_Password">Confirm your password</string>
    <string name="Create_Account">Create acount</string>
    <string name="choose_person">You need to choose if you are a student or a coach</string>
    <string name="ok">Ok</string>
    <string name="account_error">Username or Password is incorrect</string>
    <string name="sign_in_error">There seems to be one or more fields of your account missing</string>
    <string name="find_coaches">Find Coaches</string>
    <string name="title_activity_find_coaches">FindCoaches</string>
    <string name="connection_succes">u connected with ur coach successfully</string>
    <string name="connection_error">There seems to be an error in ur code</string>
    <string name="acc_exists">This account username already exists</string>


</resources>
