<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".StudentHomePage"
                android:background="@drawable/background_black">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/find_coaches"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="@drawable/background_black"
            android:text="@string/find_coaches"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    <Button
        android:id="@+id/profile_button"
        android:textSize="20dp"
       android:paddingLeft="20dp"
        android:gravity="start|center"
        android:background="@drawable/background_blue"
        android:text="@string/profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/skills_button"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:background="@drawable/background_black"
        android:text="@string/skills"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/feedback_button"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:gravity="start|center"
        android:background="@drawable/background_blue"
        android:text="@string/feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/important_dates_button"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:gravity="start|center"
        android:textColor="@color/white"
        android:background="@drawable/background_black"
        android:text="@string/important_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
        <Button
            android:id="@+id/workouts_button"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="@drawable/background_blue"
            android:text="@string/workouts"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    <Button
        android:id="@+id/goals_button"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:gravity="start|center"
        android:background="@drawable/background_black"
        android:text="@string/goals"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</LinearLayout>
    <LinearLayout
        android:gravity="top|center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="40dp"
            android:textColor="@color/white"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</LinearLayout>
</RelativeLayout>
