<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="edu.self.ludus.StudentProfile"
                android:background="@drawable/background_black">

    <LinearLayout
        android:id="@+id/title"
        android:gravity="top|center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="70dp"
            android:textColor="@color/white"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Space
        android:id="@+id/space"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <RelativeLayout
        android:layout_below="@+id/space"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/text_size"
            android:id="@+id/name"
            android:textColor="@color/white"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:textColor="@color/blue"
            android:layout_toRightOf="@+id/name"
            android:id="@+id/dash1"
            android:text="@string/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:layout_toRightOf="@+id/dash1"
            android:text="@string/john"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
        android:id="@+id/space2"
        android:layout_below="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space2"
            android:id="@+id/sport"
            android:textColor="@color/white"
            android:text="@string/sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space2"
            android:textColor="@color/blue"
            android:layout_toRightOf="@+id/sport"
            android:id="@+id/dash2"
            android:text="@string/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space2"
        android:layout_toRightOf="@+id/dash2"
        android:text="@string/soccer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <Space
            android:id="@+id/space3"
            android:layout_below="@+id/sport"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space3"
            android:id="@+id/coaches"
            android:textColor="@color/white"
            android:text="@string/coaches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space3"
            android:textColor="@color/blue"
            android:layout_toRightOf="@+id/coaches"
            android:id="@+id/dash3"
            android:text="@string/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space3"
            android:layout_toRightOf="@+id/dash3"
            android:text="@string/coach_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:id="@+id/space4"
            android:layout_below="@+id/coaches"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space4"
            android:id="@+id/city"
            android:textColor="@color/white"
            android:text="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space4"
            android:textColor="@color/blue"
            android:layout_toRightOf="@+id/city"
            android:id="@+id/dash4"
            android:text="@string/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:layout_below="@+id/space4"
            android:layout_toRightOf="@+id/dash4"
            android:text="@string/santa_clara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>
