<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.self.ludus.CoachProfile"
    android:background="@drawable/background_black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <Button
            android:id="@+id/student_button"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="@drawable/background_blue"
            android:text="@string/student"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/profile_button"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:textColor="@color/white"
            android:background="@drawable/background_black"
            android:text="@string/profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/calender_button"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="@drawable/background_blue"
            android:text="@string/calender"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/important_dates_button"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:textColor="@color/white"
            android:background="@drawable/background_black"
            android:text="@string/important_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/connect_button"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="@drawable/background_blue"
            android:text="@string/connect"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/learn_button"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:gravity="start|center"
            android:background="@drawable/background_black"
            android:text="@string/learn"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="top|center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="70dp"
            android:textColor="@color/white"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>
