<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="edu.self.ludus.StudentSkills"
                android:background="@drawable/background_black"
    android:padding="20dp">
    <LinearLayout
        android:id="@+id/Title"
        android:gravity="top|center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="70dp"
            android:textColor="@color/white"
            android:text="@string/skills"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/Title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <ImageView
            android:src="@drawable/background_blue"
            android:layout_width="250dp"
            android:layout_height="30dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:text="@string/stamina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <ImageView
            android:src="@drawable/background_blue"
            android:layout_width="90dp"
            android:layout_height="30dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <TextView
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:text="@string/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <ImageView
            android:src="@drawable/background_blue"
            android:layout_width="120dp"
            android:layout_height="30dp"/>
    </LinearLayout>


</RelativeLayout>
